2008-03-17  Benno Schulenberg <bensberg@justemail.net>
	* global.c - Fix incorrect first line jump messsage, fix
	  more comments to assist translators
	* winio.c - Fix shortcut labels not being translated.

2008-03-17  Mike Frysinger <vapier@gentoo.org>
	 * */.gitignore: Git ignore files for those running a local git
	   against SVN.

2008-03-16  Benno Schulenberg <bensberg@justemail.net>
	* src/help.c, src/global: Fix help strings no longer being 
	  translated properly.
	* src/global.c, doc/man/nanorc.5: Fix typos and poorlly worded lines
	  in the source and man pages.

2008-03-04  Chris Allegretta <chrisa@asty.org
	* everything: New shortcut backend.  New structs subnfunc
	for menu functions and toggles and sc for shortcut keys, old 
	'shortcut' and 'toggles' structs are gone.  The current implementation 
	has a bunch of broken stuff (some of which is documented in BUGS). 
	Updated nanorc.5 with some mostly complete documentation on configuring.

2007-12-20  David Lawrence Ramsey  <pooka109@gmail.com>

	* AUTHORS, doc/faq.html: Update maintenance information.
	* NEWS: Resync with NEWS from the 2.0 branch.

2007-12-18  David Lawrence Ramsey  <pooka109@gmail.com>

	* nano.c (print_opt_full): Use strlenpt() instead of strlen(),
	so that tabs are placed properly when displaying translated
	strings in UTF-8, as found by Jean-Philippe Guérard.

2007-12-17  David Lawrence Ramsey  <pooka109@gmail.com>

	* configure.ac, doc/texinfo/nano.texi, nano.c (terminal_init):
	Change slang curses emulation support to turn off the same
	options as --enable-tiny, as it's hopelessly broken otherwise.
	* nano.c (disable_signals, main): Simplify terminal handling by
	using raw mode instead of cbreak mode.
	* text.c (execute_command): Call terminal_init() instead of just
	disable_signals() after executing the command, as the command
	may have changed the terminal settings.
	* ChangeLog.pre-2.1: Add missing attribution.
	* NEWS: Resync with NEWS from the 2.0 branch.
